Added arrows in shader. Added simple particle simulation.

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
 
   <body>
     <div id="content">
-      <canvas id="canvas" width="800" height="800"></canvas>
+      <div id="canvas_wrapper">
+        <canvas id="canvas" width="800" height="800"></canvas>
+        <canvas id="overlay" width="800" height="800"></canvas>
+      </div>
     </div>
   </body>
 </html>
